# spectra

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.dev.yml
.cursor/rules/: 00-phase-and-build.mdc  10-upstream-gates.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci-extended.yml  ci.yml
.sentrux/: rules.toml
docs/: VERIFICATION.md
docs/bench/: EXPERIMENTS.md  PERFORMANCE_STUDY.md
infra/aws/: README.md
infra/aws/checksums/: SHA256SUMS
infra/aws/lib/: download-verified.sh  verify-sha256.sh
infra/aws/spectra/: .gitignore  README.md  bootstrap.sh  deploy-and-run-bench.sh  deploy-and-run-e2e.sh  docker-compose.data.yml  fetch-reports.sh  instances.env.example  provision.sh  run-bench-aws.sh  run-e2e-aws.sh  teardown.sh
infra/aws/spectra-multidw/: .gitignore  README.md  bootstrap-dw.sh  bootstrap-writer.sh  bootstrap.sh  deploy-and-run.sh  fetch-reports.sh  instances.env.example  provision.sh  run-multidw-aws.sh  teardown.sh
profiling/spectra-bench/reports/: README.md  bm-s0-mem-embedded-aws-t3-xlarge.json  bm-s1-mem-embedded-aws-t3-xlarge.json  bm-s2-sqlite-embedded-aws-t3-xlarge.json  bm-s3-mem-embedded-aws-t3-xlarge.json  bm-sq0-clickhouse-remote-ingest-aws-t3-xlarge.json  bm-sq0-mem-embedded-aws-t3-xlarge.json  bm-sq0-sqlite-embedded-aws-t3-xlarge.json  bm-sq0-tensorbase-remote-ingest-aws-t3-xlarge.json  bm-sq1-clickhouse-remote-ingest-aws-t3-xlarge.json  bm-sq1-mem-embedded-aws-t3-xlarge.json  bm-sq1-sqlite-embedded-aws-t3-xlarge.json  bm-sq1-tensorbase-remote-ingest-aws-t3-xlarge.json  bm-sq2-clickhouse-remote-ingest-aws-t3-xlarge.json  bm-sq2-mem-embedded-aws-t3-xlarge.json  bm-sq2-sqlite-embedded-aws-t3-xlarge.json  bm-sq2-tensorbase-remote-ingest-aws-t3-xlarge.json  bm-sq3-clickhouse-remote-ingest-aws-t3-xlarge.json  bm-sq3-mem-embedded-aws-t3-xlarge.json  bm-sq3-sqlite-embedded-aws-t3-xlarge.json  bm-sq3-tensorbase-remote-ingest-aws-t3-xlarge.json  bm-sw0-clickhouse-remote-ingest-aws-t3-xlarge.json  bm-sw0-mem-embedded-aws-t3-xlarge.json  bm-sw0-sqlite-embedded-aws-t3-xlarge.json  bm-sw0-tensorbase-remote-ingest-aws-t3-xlarge.json  bm-sw1-clickhouse-remote-ingest-aws-t3-xlarge.json  bm-sw1-mem-embedded-aws-t3-xlarge.json  bm-sw1-sqlite-embedded-aws-t3-xlarge.json  bm-sw1-tensorbase-remote-ingest-aws-t3-xlarge.json  bm-sw2-clickhouse-remote-ingest-aws-t3-xlarge.json  bm-sw2-mem-embedded-aws-t3-xlarge.json  bm-sw2-sqlite-embedded-aws-t3-xlarge.json  bm-sw2-tensorbase-remote-ingest-aws-t3-xlarge.json  bm-sw3-clickhouse-remote-ingest-aws-t3-xlarge.json  bm-sw3-mem-embedded-aws-t3-xlarge.json  bm-sw3-sqlite-embedded-aws-t3-xlarge.json  bm-sw3-tensorbase-remote-ingest-aws-t3-xlarge.json  bm-sw4-clickhouse-remote-ingest-aws-t3-xlarge.json  bm-sw4-mem-embedded-aws-t3-xlarge.json  bm-sw4-sqlite-embedded-aws-t3-xlarge.json  (+24 more)
scripts/: coverage.sh  fill-bench-scoreboard.py  gate-check.sh  run-bench-matrix.sh  verify-release.sh
spectra/: Cargo.toml  README.md
spectra-backend-clickhouse/: Cargo.toml  README.md
spectra-backend-clickhouse/src/: ddl.rs  events.rs  lib.rs  metrics.rs
spectra-backend-clickhouse/tests/: storage_contract.rs
spectra-backend-mem/: Cargo.toml  README.md
spectra-backend-mem/src/: lib.rs
spectra-backend-mem/tests/: storage_contract.rs
spectra-backend-remote-common/: Cargo.toml  README.md
spectra-backend-remote-common/src/: client.rs  events.rs  lib.rs  mem_store.rs  metrics.rs  query_sql.rs
spectra-backend-sqlite/: Cargo.toml  README.md
spectra-backend-sqlite/src/: lib.rs
spectra-backend-sqlite/tests/: storage_contract.rs
spectra-backend-tensorbase/: Cargo.toml  README.md
spectra-backend-tensorbase/src/: ddl.rs  events.rs  lib.rs  metrics.rs
spectra-backend-tensorbase/tests/: storage_contract.rs
spectra-bench/: Cargo.toml  README.md
spectra-bench/src/: cli.rs  main.rs  run.rs  stats.rs  sweep.rs
spectra-bench/src/capacity/: mod.rs
spectra-bench/src/experiments/: mod.rs
spectra-bench/src/report/: mod.rs  schema.rs  stats.rs
spectra-bench/src/workload/: durable.rs  firehose.rs  mod.rs  prefill.rs  query_bench.rs
spectra-core/: Cargo.toml  README.md
spectra-core/src/: aggregate.rs  classification.rs  config.rs  dispatcher.rs  error.rs  event_filter.rs  facade.rs  gate.rs  lib.rs  query.rs  query_map.rs  registry.rs  rootcause.rs  router.rs  schema.rs  sink.rs  storage.rs  test_util.rs  topic.rs  types.rs
spectra-core/src/emit_buffer/: drain.rs  mod.rs  push.rs  scopes.rs  state.rs  tests.rs  types.rs
spectra-core/src/sinks/: chained.rs  counting.rs  mod.rs  ndjson_file.rs  noop.rs  recording.rs
spectra-core/tests/: query_dto.rs
spectra-e2e/: Cargo.toml  README.md
spectra-e2e/src/: lib.rs
spectra-e2e/tests/: matrix_smoke.rs  scenarios.rs
spectra-macros/: Cargo.toml  README.md
spectra-macros/src/: dsl_parser.rs  lib.rs
spectra-macros/src/codegen/: helpers.rs  inventory.rs  metric.rs  mod.rs  schema.rs  topics.rs  types.rs  util.rs
spectra-runtime/: Cargo.toml  README.md
spectra-runtime/src/: async_writer.rs  builder.rs  lib.rs  persist_config.rs  persist_sink.rs
spectra-testkit/: Cargo.toml  README.md
spectra-testkit/src/: catalog.rs  fixtures.rs  lib.rs  runner.rs  scenario.rs  shard.rs  storage_contract.rs
spectra-testkit/src/bootstrap/: backends.rs  mod.rs  telemetry.rs
spectra-testkit/src/matrix/: mod.rs  presets.rs
spectra/examples/: quickstart.rs  quickstart_clickhouse_emit.rs  quickstart_consume_forward.rs  quickstart_publish_only.rs  quickstart_remote.rs  quickstart_schema_emit.rs  quickstart_sqlite.rs  quickstart_telemetry.rs  quickstart_tensorbase_emit.rs  quickstart_transport.rs
spectra/schemas/: platform_smoke_counter_spectra_metric.rs  platform_smoke_event_spectra_schema.rs
spectra/src/: helpers.rs  lib.rs  schemas.rs  topics.rs
spectra/tests/: smoke_inventory.rs  ui.rs
spectra/tests/ui/: fail_metric_missing_name.rs  fail_metric_missing_name.stderr  fail_schema_missing_table.rs  fail_schema_missing_table.stderr  pass_metric.rs  pass_schema.rs
(+10 files in other folders)
