[package]
name = "spectra-backend-mem"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-memory metrics and events backend (facade default)"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
spectra-core = { workspace = true }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
spectra-testkit = { workspace = true, features = ["mem"] }

[lints]
workspace = true
