[package]
name = "spectra-backend-remote-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared ClickHouse-protocol remote storage logic for Spectra backends"
repository.workspace = true
readme = "README.md"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clickhouse = { version = "0.15", features = ["time"] }
parking_lot = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spectra-core = { workspace = true }
tokio = { version = "1", features = ["process"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
