[package]
name = "spectra-backend-tensorbase"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scale-out TensorBase storage adapter (ClickHouse-compatible protocol)"
repository.workspace = true
readme = "README.md"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
spectra-backend-remote-common = { workspace = true }
spectra-core = { workspace = true }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
spectra-testkit = { workspace = true, features = ["mem"] }

[lints]
workspace = true
