[package]
name = "spectra-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Performance CLI for Spectra matrix scenarios"
publish = false

[[bin]]
name = "spectra-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spectra-core = { workspace = true }
spectra = { workspace = true, default-features = false, features = ["mem"] }
spectra-testkit = { workspace = true, features = ["mem", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[features]
default = ["mem", "sqlite"]
mem = ["spectra/mem", "spectra-testkit/mem"]
sqlite = ["spectra/sqlite", "spectra-testkit/sqlite"]
tensorbase = ["spectra/tensorbase", "spectra-testkit/tensorbase"]
clickhouse = ["spectra/clickhouse", "spectra-testkit/clickhouse"]
telemetry-console = ["spectra/telemetry-console", "spectra-testkit/telemetry-console"]

[lints]
workspace = true
