[package]
name = "uf-spectra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spectra storage traits, sink, router, registry, and query DTOs"
repository.workspace = true
documentation = "https://docs.rs/uf-spectra-core"
readme = "README.md"

[lib]
name = "spectra_core"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
quark = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = { workspace = true }
toml = "0.8"
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
