[package]
name = "spectra-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Correctness integration tests over the Spectra verification matrix"
publish = false

[dependencies]
spectra-testkit = { workspace = true }
spectra = { workspace = true, default-features = false, features = ["mem"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"

[features]
default = ["mem", "sqlite", "telemetry-console"]
mem = ["spectra-testkit/mem", "spectra/mem"]
sqlite = ["spectra-testkit/sqlite", "spectra/sqlite"]
tensorbase = ["spectra-testkit/tensorbase", "spectra/tensorbase"]
clickhouse = ["spectra-testkit/clickhouse", "spectra/clickhouse"]
telemetry-console = ["spectra-testkit/telemetry-console", "spectra/telemetry-console"]

[dev-dependencies]
spectra-testkit = { workspace = true, features = ["mem", "sqlite", "tensorbase", "clickhouse"] }
spectra = { workspace = true, features = ["mem", "sqlite", "tensorbase", "clickhouse"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
