[package]
name = "spectra-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for Spectra schema and metric DSL"
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

[lints]
workspace = true
