[package]
name = "spectra-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Matrix bootstrap, scenarios, and fixtures for Spectra tests"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spectra = { workspace = true, default-features = false, features = ["mem"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[features]
default = ["mem", "sqlite"]
mem = ["spectra/mem"]
sqlite = ["spectra/sqlite"]
tensorbase = ["spectra/tensorbase"]
clickhouse = ["spectra/clickhouse"]
telemetry-console = ["spectra/telemetry-console"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
